# egt

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  ChangeLog  Doxyfile  Makefile  Makefile.am  README.md  animation.cpp  animation.h  autogen.sh  brick.cpp  chart.cpp  chart.h  coin.cpp  color.cpp  color.h  configure.ac  easing.cpp  event_loop.cpp  event_loop.h  floating.cpp  font.h  geometry.cpp  geometry.h  imagecache.cpp  imagecache.h  images.sh  info.cpp  info.pot  info_chinese.po  info_german.po  input.cpp  input.h  kmsscreen.cpp  kmsscreen.h  (+35 more)
docs/: .gitignore  CMakeLists.txt  Doxyfile.in  Info.plist  Info.plist.in  Makefile.am  custom_footer.html  custom_header.html  extra_stylesheet.css  header.tex  highlight.pack.js  todo.txt
docs/src/: animation.dox  animation.md  api_changes.md  audio.md  colors.dox  colors.md  coord.dox  custom.dox  custom.md  debugging.dox  debugging.md  dev_topics.md  draw.dox  draw.md  dropshadow.sh  eclipse.dox  eclipse.md  egt_async_events.graphml  egt_libs.graphml  environ.dox  environ.md  events.dox  events.md  faq.dox  fonts.dox  fonts.md  gauge.fcstd  geometry.dox  geometry.md  gstreamer.md  index.dox  index.md  input.dox  input.md  introduction.dox  introduction.md  layout.dox  layout.md  localization.dox  localization.md  (+16 more)
examples/: .gitignore  CMakeLists.txt  Makefile.am  README.md
examples/animations/: .gitignore  animations.cpp
examples/audioplayer/: .gitignore  audioplayer.cpp  audioplayer.xml
examples/basic/: basic.cpp  ui.xml
examples/basicui/: .gitignore  basicui.cpp  button_page.xml  camera.xml  chart.xml  checkbox_page.xml  label_page.xml  list_page.xml  meter_page.xml  patterns.xml  progress_page.xml  scrollwheel_page.xml  shapes_page.xml  slider_page.xml  text_page.xml  themes.xml  ui.xml  video.xml
examples/basicui/xml_src/: button_page.cpp  checkbox_page.cpp  label_page.cpp  list_page.cpp  meter_page.cpp  (+5 more)
examples/boards/: .gitignore  boards.cpp  boards.xml
examples/brick/: brick.cpp
examples/calc/: calc.cpp  calc.xml
examples/charts/: charts.cpp  charts.xml
examples/coin/: coin.cpp
examples/colors/: colors.cpp
examples/dash/: dash.cpp  dash.xml
examples/dialog/: dialog.cpp
examples/drag/: .gitignore  drag.cpp  drag.xml
examples/drummachine/: .gitignore  drummachine.cpp  drummachine.xml
examples/easing/: .gitignore  easing.cpp  easing.xml
examples/floating/: floating.cpp
examples/frames/: frames.cpp
examples/gallery/: .gitignore  gallery.cpp
examples/gauge/: gauge.cpp  gauge.xml
examples/gpio/: gpio.cpp
examples/grid/: grid.cpp
examples/guage/: .gitignore  guage.cpp
examples/i18n/: .gitignore  CMakeLists.txt  Makefile.am  de.po  es.po  fr.po  hi.po  i18n.cpp  i18n.xml  zh.po
examples/icon/: icon.cpp
examples/imagebutton/: imagebutton.cpp
examples/imagestack/: .gitignore  imagestack.cpp  imagestack.xml
examples/infotain/: .gitignore  infotain.cpp
examples/keyboard/: keyboard.cpp
examples/keys/: keys.cpp
examples/launcher/: .gitignore  launch.sh  launcher.cpp  menu.xml
examples/layout/: layout.cpp
examples/listboxmulti/: listboxmulti.cpp
examples/luarepl/: .gitignore  luarepl.cpp
examples/monitor/: monitor.cpp  monitor.xml
examples/motorcycledash/: README.md  eraw.bin.1024x600  eraw.h  eraw.h.1024x600  initcan.sh  motorcycledash.cpp
examples/newsfeed/: .gitignore  feed.xml  newsfeed.cpp
examples/press/: press.cpp
examples/resource/: .gitignore  CMakeLists.txt  Makefile.am  resource.cpp
examples/restart/: appMonitor.sh  egtApp.cpp
examples/sevensegment/: .gitignore  sevensegment.cpp
examples/sizers/: .gitignore  sizers.cpp
examples/snippets/: .gitignore  CMakeLists.txt  Makefile.am  gen.sh  screenshot.sh  snippet0.cpp  snippet1.cpp  snippet10.cpp  snippet2.cpp  snippet3.cpp  snippet4.cpp  snippet5.cpp  snippet6.cpp  snippet7.cpp  snippet8.cpp  snippet9.cpp  snippets.cpp
examples/space/: space.cpp  space.xml
examples/sprite/: sprite.cpp
examples/squares/: squares.cpp
examples/thermostat/: thermostat.cpp
examples/video/: .gitignore  CMakeLists.txt  Makefile.am  camera.cpp  capture.cpp  video.cpp  video.xml
examples/virtualkeyboard/: .gitignore  virtualkeyboard.cpp
examples/water/: water.cpp
examples/whiteboard/: .gitignore  whiteboard.cpp  whiteboard.xml
examples/widgets/: widgets.cpp  widgets.xml
lua/: .gitignore  CMakeLists.txt  Makefile.am  ui.i
src/: .gitignore  CMakeLists.txt  Makefile.am  Makefile.asio  Makefile.tidy  animation.cpp  app.cpp  asio.cmake  audio.cpp  button.cpp  buttongroup.cpp  camera.cpp  canvas.cpp  capture.cpp  chart.cpp  checkbox.cpp  color.cpp  combo.cpp  config.h.in  dialog.cpp  easing.cpp  event.cpp  event_loop.cpp  eventloop.cpp  filedialog.cpp  font.cpp  form.cpp  frame.cpp  framebuffer.cpp  gauge.cpp  geometry.cpp  gitversion.cmake  gitversion.h.in  grid.cpp  guage.cpp  image.cpp  imagecache.cpp  imagegroup.cpp  input.cpp  keyboard.cpp  (+50 more)
src/detail/: alignment.cpp  asioallocator.h  base64.cpp  base64.h  basicwindow.cpp  cairoabstraction.cpp  cairoabstraction.h  collision.cpp  dump.h  egtlog.cpp  egtlog.h  eraw.cpp  eraw.h  erawimage.h  filesystem.cpp  fmt.h  gpu.cpp  gpu.h  image.cpp  imagecache.cpp  layout.cpp  memset32.S  mousegesture.cpp  object.cpp  painter.h  planewindow.cpp  priorityqueue.h  resource.cpp  serialize.cpp  spriteimpl.h  string.cpp  svg.cpp  svg.h  textwidget.cpp  utf8text.cpp  utf8text.h  windowimpl.cpp
src/input/: evdev.cpp  input.cpp  inputevdev.cpp  inputlibinput.cpp  inputtslib.cpp  libinput.cpp  tslib.cpp
src/lua/: script.c  script.h
src/network/: http.cpp
src/screen/: framebuffer.cpp  kmsoverlay.cpp  kmsscreen.cpp  screen.cpp  x11screen.cpp
src/themes/: midnight.cpp  shamrock.cpp  sky.cpp
test/: .gitignore  CMakeLists.txt  Makefile.am  README.md  main.cpp
test/audio/: audio.cpp
test/video/: camera.cpp  video.cpp
test/widgets/: button.cpp  combobox.cpp  form.cpp  frame.cpp  grid.cpp  layout.cpp  listbox.cpp  notebook.cpp  scrollwheel.cpp  sizer.cpp  slider.cpp  valuerange.cpp  view.cpp  window.cpp
(+769 files in other folders)
